Initialize controller made and working